--- a/backend/package.json
+++ b/backend/package.json
@@ -16,9 +16,11 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "express": "^4.18.2",
-        "pg": "^8.11.3",
         "cors": "^2.8.5",
-        "dotenv": "^16.3.1"
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "fast-xml-parser": "^5.3.2",
+        "multer": "^2.0.2",
+        "pg": "^8.11.3"
     }
 }
