--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
         "express": "^4.18.2",
         "fast-xml-parser": "^5.3.2",
         "multer": "^2.0.2",
+        "node-fetch": "^3.3.2",
         "pg": "^8.11.3"
     }
 }
