--- a/backend/package.json
+++ b/backend/package.json
@@ -16,12 +16,18 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@prisma/adapter-pg": "^7.0.1",
+        "@prisma/client": "^7.0.1",
         "cors": "^2.8.5",
+        "date-fns": "^4.1.0",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "fast-xml-parser": "^5.3.2",
         "multer": "^2.0.2",
         "node-fetch": "^3.3.2",
         "pg": "^8.11.3"
+    },
+    "devDependencies": {
+        "prisma": "^7.0.1"
     }
 }
