--- a/backend/package.json
+++ b/backend/package.json
@@ -18,11 +18,13 @@
     "dependencies": {
         "@prisma/adapter-pg": "^7.0.1",
         "@prisma/client": "^7.0.1",
+        "bcryptjs": "^3.0.3",
         "cors": "^2.8.5",
         "date-fns": "^4.1.0",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "fast-xml-parser": "^5.3.2",
+        "jsonwebtoken": "^9.0.3",
         "multer": "^2.0.2",
         "node-fetch": "^3.3.2",
         "pg": "^8.11.3"
