feat: integração de impressora térmica ESC/POS via hardware-service - Adicionado PrinterDevice com suporte a impressoras 58mm/80mm - Hook useHardware atualizado com printReceipt e listPrinters - SaleSuccessModal com impressão térmica e fallback para navegador - Formato de cupom com endereço completo e normalização de acentos - Script hardware.js para iniciar serviço de hardware

--- a/hardware-service/.env.example
+++ b/hardware-service/.env.example
@@ -28,3 +28,12 @@ SCANNER_ENABLED=true
 
 # Debug mode
 DEBUG=true
+
+# Thermal Printer Configuration
+PRINTER_ENABLED=false
+PRINTER_TYPE=epson
+# Printer interface - use printer name for Windows USB printers
+# Examples: "\\\\localhost\\Brother QL-710W" or "usb" or "COM5"
+PRINTER_INTERFACE=
+# Character width: 32 for 58mm, 48 for 80mm printers
+PRINTER_WIDTH=32
