--- a/hardware-service/package.json
+++ b/hardware-service/package.json
@@ -17,8 +17,9 @@
     "author": "",
     "license": "MIT",
     "dependencies": {
-        "ws": "^8.14.2",
         "dotenv": "^16.3.1",
-        "serialport": "^12.0.0"
+        "node-thermal-printer": "^4.5.0",
+        "serialport": "^12.0.0",
+        "ws": "^8.14.2"
     }
 }
