--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,9 @@
         "date-fns": "^4.1.0",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
+        "express-rate-limit": "^8.2.1",
         "fast-xml-parser": "^5.3.2",
+        "helmet": "^8.1.0",
         "jsonwebtoken": "^9.0.3",
         "multer": "^2.0.2",
         "node-fetch": "^3.3.2",
